💄 Spacing fix

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,7 +6,7 @@
   height: 52px;
   margin: 0;
   background-color: transparent;
-  padding: 2.25rem 1.25rem 2.25rem 0.75rem;
+  padding: 2.25rem 1.5rem 2.25rem 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
